# OpenEnv-Meta-Hackathon---Adversarial-Resume-Screening-Environment

./: .gitattributes  .gitignore  Dockerfile  PRE_SUBMISSION_AUDIT_REPORT.md  README.md  __init__.py  blog.md  client.py  eval_comparison.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_day3_overseer.py  test_simple.py  train_grpo.py  train_grpo_fleet.ipynb
assets/: eval_results.json
data/: resumes.json
server/: Dockerfile  __init__.py  app.py  environment.py  fleet_app.py  fleet_environment.py  overseer_env.py
